--- a/src/pages/admin-menu/admin-menu.html
+++ b/src/pages/admin-menu/admin-menu.html
@@ -14,7 +14,7 @@
       Services
     </ion-item>
 
-    <ion-item class="lists">
+    <ion-item class="lists" (click)="Summary()">
       User Summary
     </ion-item>
 
