--- a/src/pages/services-menu/services-menu.html
+++ b/src/pages/services-menu/services-menu.html
@@ -18,11 +18,11 @@
       Update Advertisement
     </ion-item>
 
-    <ion-item class="lists">
+    <ion-item class="lists" (click)="adminRemove()">
       Remove Advertisment
     </ion-item>
 
-    <ion-item class="lists">
+    <ion-item class="lists" (click)="adminView()">
       View Advertisment
     </ion-item>
   </ion-list>
