--- a/src/pages/dashboard-admin/dashboard-admin.html
+++ b/src/pages/dashboard-admin/dashboard-admin.html
@@ -7,12 +7,12 @@
 
   <ion-toolbar primary>
     <ion-row>
-      <ion-col width20>
+      <ion-col col-2>
         <button ion-button icon-only clear>
           <ion-icon color="dark" name="search"></ion-icon>
         </button>
       </ion-col>
-      <ion-col width80>
+      <ion-col col-8>
         <ion-input type="text" placeholder="Search..."></ion-input>
       </ion-col>
     </ion-row>
