--- a/src/pages/sign-up/sign-up.html
+++ b/src/pages/sign-up/sign-up.html
@@ -1,6 +1,10 @@
 <ion-content>
   <p no-lines class="signup">Sign Up</p>
 
+  <!-- //full name, username,email,password// -->
+
+  
+  
   <ion-list class="list">
     <ion-item>
       <ion-input placeholder="Full Name"></ion-input>
