--- a/src/pages/business-detail/business-detail.html
+++ b/src/pages/business-detail/business-detail.html
@@ -1,18 +1,47 @@
-<!--
-  Generated template for the BusinessDetailPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>BusinessDetail</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
 <ion-content padding>
+  <ion-item no-lines>
+    <button item-left ion-button icon-only clear class="btnBack" (click)="Back()">
+      <ion-icon name='arrow-back'></ion-icon>
+    </button>
+  </ion-item>
+
+  <p class="title">profile</p>
+
+  <button ion-button color="primary" class="edit" clear block (click)="Edit()">Edit</button>
+
+  <ion-item no-lines>
+    <ion-img src="assets/imgs/s3.png">
+    </ion-img>
+  </ion-item>
+
+  <ion-item no-lines>
+    <p class="label">Company Name</p>
+    <p class="field">Pizza Hut</p>
+  </ion-item>
+
+  <ion-item no-lines>
+    <p class="label">Username</p>
+    <p class="field">pizzahutbn</p>
+  </ion-item>
+
+  <ion-item no-lines>
+    <p class="label">Password</p>
+    <p class="field">PizzaHut.123</p>
+  </ion-item>
+
+  <ion-item no-lines>
+    <p class="label">Address</p>
+    <p class="field">The Mall Gadong, Kampong Gadong, Brunei BG1121</p>
+  </ion-item>
+
+  <ion-item no-lines>
+    <p class="label">Contact No</p>
+    <p class="field">222 6111</p>
+  </ion-item>
+
+  <ion-item no-lines>
+    <p class="label">E-mail</p>
+    <p class="field">pizzahut_bn@gmail.com</p>
+  </ion-item>
 
 </ion-content>
