--- a/src/pages/edit-business-detail/edit-business-detail.html
+++ b/src/pages/edit-business-detail/edit-business-detail.html
@@ -1,18 +1,54 @@
-<!--
-  Generated template for the EditBusinessDetailPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>EditBusinessDetail</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
 <ion-content padding>
+  <ion-item no-lines>
+    <button item-left ion-button icon-only clear class="btnBack" (click)="Back()">
+      <ion-icon name='arrow-back'></ion-icon>
+    </button>
+  </ion-item>
+
+  <p class="title">profile</p>
+
+  <button ion-button color="primary" class="save" clear block (click)="Save()">Save</button>
+
+  <ion-item no-lines>
+    <ion-img src="assets/imgs/s3.png">
+    </ion-img>
+  </ion-item>
+
+  <form>
+    <ion-list>
+      <ion-item>
+        <ion-label floating>Company Name</ion-label>
+        <ion-input type="text "></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label floating>Username</ion-label>
+        <ion-input type="text "></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label floating>Password</ion-label>
+        <ion-input type="text "></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label floating>Address</ion-label>
+        <ion-input type="text "></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label floating>Contact No.</ion-label>
+        <ion-input type="text "></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label floating>E-mail</ion-label>
+        <ion-input type="text "></ion-input>
+      </ion-item>
+
+    </ion-list>
+  </form>
+
+  
 
 </ion-content>
